<resources>
    <string name="app_name">MarketAmericaProject</string>
    <string name="txtUsername">Username</string>
    <string name="txtPass">Password</string>
    <string name="txtRegister">Register</string>
    <string name="txtLogin">Login</string>
    <string name="txtFname">First Name</string>
    <string name="txtLname">Last Name</string>
    <string name="txtEmail">Email</string>
    <string name="txtRepeatPass">Repeat Password</string>
    <string name="txtBack">Back</string>
    <string name="txtSearch">Search</string>
    <string name="txtCatalog">Catalog</string>
    <string name="txtFavorites">Favorites</string>
    <string name="txtCart">Your Cart</string>
    <string name="txtLogout">Logout</string>
    <string name="txtKeywords">Keywords</string>
    <string name="txtPurchase">Purchase</string>
    <string name="txtCheckout">Checkout</string>
    <string name="txtDeletePrompt">Tap and hold an item to remove it from your cart</string>
    <string name="txtRefresh">Refresh</string>
    <string name="txtSortPrompt">Sort by Price:</string>
    <string name="txtShipTo">Shipping Address:</string>
    <string name="txtGPS">Use GPS</string>
    <string name="txtShopper">SHOPPER</string>
    <string name="txtMarket">market</string>
    <string name="txtAmerica">america</string>
    <string name="txtAddress">Address</string>
</resources>
